tests/ui/typeck/issue-90319.stderr
error[E0412]: cannot find type `Thing` in this scope
  --> $DIR/issue-90319.rs:14:23
   |
LL |     let thing = get::<Thing>();
   |                       ^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
